--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
     </article>
 
     <article>
-
       <table border="2" width="500">
         <caption>Table(표)</caption>
         <thead>
@@ -65,26 +64,26 @@
           </tr>
         </tfoot>
       </table>
+
       <!-- 
-      전체선택(Ctrl+A)
-      Alt + Shift => + F
+        전체선택(Ctrl + A)
+        Alt + Shift + F 
       -->
       <table border="5" cellpadding="20">
         <tr>
-          <td colspan="3">01, 02, 03</td>
+          <th colspan="3">01, 02, 03</th>
         </tr>
         <tr>
-          <td rowspan="2">04, 07</td>
-          <td colspan="2">05, 06</td>
+          <th rowspan="2">04, 07</th>
+          <th colspan="2">05, 06</th>
         </tr>
         <tr>
-          <td>08</td>
-          <td>09</td>
+          <th>08</th>
+          <th>09</th>
         </tr>
       </table>
     </article>
-  </main>
-  <footer></footer>
+
 </body>
 
 
