--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
       -->
       <table border="5" cellpadding="20">
         <tr>
-          <th colspan="3">01, 02, 03</th>
+          <td colspan="3">01, 02, 03</td>
         </tr>
         <tr>
-          <th rowspan="2">04, 07</th>
-          <th colspan="2">05, 06</th>
+          <td rowspan="2">04, 07</td>
+          <td colspan="2">05, 06</td>
         </tr>
         <tr>
-          <th>08</th>
-          <th>09</th>
+          <td>08</td>
+          <td>09</td>
         </tr>
       </table>
     </article>
